--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,13 @@ dependencies:
   firebase_storage: ^13.0.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   flutter_local_notifications: ^19.4.0
   flutter_localizations:
     sdk: flutter
+  flutter_svg: ^2.2.0
+  google_fonts: ^6.3.0
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
