feat: Add BookingInfo and AdminHome pages
- Implemented BookingInfo page to display booking details.
- Created AdminHome page with a welcome message for admin users.
- Updated Home page to handle user roles and navigation.
- Removed deprecated home_page.dart file.
- Added WorkerHome page for worker-specific functionalities.
- Enhanced LoginBloc to load worker data and handle login states.
- Introduced LoadWorkerData event and corresponding states.
- Updated splash screen to manage user login status.
- Added location picker functionality with a modal bottom sheet.
- Integrated image compression and upload services.
- Updated pubspec.yaml and pubspec.lock with new dependencies.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,9 @@
 analyzer:
   errors:
     depend_on_referenced_packages: ignore
+    avoid_init_to_null: ignore
+    must_be_immutable: ignore
+    deprecated_member_use: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
