--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^6.0.0
   cupertino_icons: ^1.0.8
   date_time_format: ^2.0.1
+  equatable: ^2.0.7
   firebase_analytics: ^12.0.0
   firebase_auth: ^6.0.0
   firebase_core: ^4.0.0
@@ -41,12 +42,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_image_compress: ^2.4.0
   flutter_local_notifications: ^19.4.0
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.2.0
   google_fonts: ^6.3.0
   hive_flutter: ^1.1.0
+  image_cropper: ^9.1.0
+  image_picker: ^1.1.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_lints: ^5.0.0
