--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cloud_firestore: ^6.0.0
   cupertino_icons: ^1.0.8
   date_time_format: ^2.0.1
+  dio: ^5.8.0+1
   equatable: ^2.0.7
   firebase_analytics: ^12.0.0
   firebase_auth: ^6.0.0
@@ -52,6 +53,8 @@ dependencies:
   image_cropper: ^9.1.0
   image_picker: ^1.1.2
   intl: ^0.20.2
+  url_launcher: ^6.3.2
+  video_player: ^2.10.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
