--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   image_cropper: ^9.1.0
   image_picker: ^1.1.2
   intl: ^0.20.2
+  local_auth: ^2.3.0
   url_launcher: ^6.3.2
   video_player: ^2.10.0
 
