feat: Implement user signup functionality with image upload and location selection
- Refactored Signup page to use StatefulWidget for better state management.
- Added image picking and cropping functionality for profile and document images.
- Integrated location detection using Geolocator and Geocoding packages.
- Implemented job role selection with a bottom sheet for better user experience.
- Added validation for email and phone number during signup.
- Enhanced error handling and user feedback through SnackBars.
- Updated AppServices to include email registration check.
- Modified AuthServices to handle user registration and error messages.
- Added new dependencies for geolocation and background tasks in pubspec.yaml.

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,6 +13,7 @@ analyzer:
     avoid_init_to_null: ignore
     must_be_immutable: ignore
     deprecated_member_use: ignore
+    override_on_non_overriding_member: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
