--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  background_fetch: ^1.4.0
   cached_network_image: ^3.4.1
   carousel_slider: ^5.1.1
   cloud_firestore: ^6.0.0
@@ -48,6 +49,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.2.0
+  geocoding: ^4.0.0
+  geolocator: ^14.0.2
   google_fonts: ^6.3.0
   hive_flutter: ^1.1.0
   image_cropper: ^9.1.0
