feat: Add Firebase configuration and update Android/iOS settings
- Added .firebaserc for Firebase project configuration.
- Updated Android NDK version in build.gradle.kts.
- Modified AndroidManifest.xml to include tools namespace and replace application label.
- Enhanced firebase.json with functions configuration and improved formatting.
- Removed ESLint configuration file from functions directory.
- Adjusted error handling in notifyAgentOnAssignment function to use agent's lanCode directly.
- Cleaned up package.json by removing lint script.
- Updated Podfile.lock to include new dependencies: background_fetch, geocoding_ios, geolocator_apple, and package_info_plus.
- Refined Xcode project settings by removing unnecessary input/output paths.
- Added new localization strings for service creation and update failures in Arabic and English.
- Updated localization classes to include new strings for confirmation dialogs.
- Enhanced edit_profile.dart to pass additional worker data.
- Improved booking_controllers.dart with confirmation dialogs for tracking actions.
- Refactored admin_home.dart to include reject confirmation dialog and improved user filtering.
- Updated edit_services.dart to handle service creation and update errors more gracefully.
- Cleaned up login.dart by enabling debug mode for testing credentials.
- Refactored app_services.dart to streamline service fetching from Firestore.

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -18,8 +19,10 @@
     <!-- Optional fingerprint hardware feature -->
     <uses-feature android:name="android.hardware.fingerprint" android:required="false" />
     <application
+
         android:enableOnBackInvokedCallback="true"
         android:label="Abo Glumbo Worker"
+        tools:replace="android:label"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
