--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -14,6 +14,7 @@ analyzer:
     must_be_immutable: ignore
     deprecated_member_use: ignore
     override_on_non_overriding_member: ignore
+    unused_field: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
