--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -71,11 +71,9 @@
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
-		<string>location</string>
-		<string>background-fetch</string>
-		<string>background-processing</string>
-		<string>remote-notification</string>
-		<string>fetch</string>
+    	<string>location</string>
+    	<string>remote-notification</string>
+    	<string>processing</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
